# ai-agent-multiplatform

./: .gitignore  AGENT_README.md
components/: example-chain.json  example-translator.json  example-weather.json
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: AGENT_IMPROVEMENT_ANALYSIS.md  AGENT_IMPROVEMENT_REPORT.md  COMPONENT_SYSTEM.md  HOW_TO_ADD_SKILL.md
download/: AI_Agent三端应用项目设计文档.docx  AI_Agent能力介绍.docx
mobile/: App.tsx  package.json
mobile/src/screens/: ChatScreen.tsx  ConversationListScreen.tsx  SettingsScreen.tsx
src/agent/: index.ts  utils.ts
src/agent/components/: index.ts  loader.ts  manager.ts  templates.ts  types.ts
src/agent/core/: engine.ts  platform.ts  types.ts
src/agent/hooks/: index.ts
src/agent/memory/: context.ts  manager.ts
src/agent/tools/: builtin.ts  definitions.ts  docx-enhanced.ts  executors.ts  filesystem.ts  frontend-design.ts  registry.ts  sandbox.ts
src/agent/utils/: cache.ts  chain.ts  index.ts  monitoring.ts  recovery.ts  streaming.ts
src/app/: page.tsx
src/components/agent/: AgentChat.tsx
